# auth

./: auth.cabal
app/: Main.hs
src/: AuthServer.hs  ServerState.hs
src/Crypto/: Password.hs  Session.hs
src/Data/Bson/: Serialization.hs
src/Database/: Query.hs  Schema.hs
src/Database/Query/: Group.hs  Session.hs  User.hs
src/Database/Schema/: Methods.hs  Selectors.hs
src/Route/: Auth.hs  Register.hs
src/Route/Auth/: Cookies.hs
