name:                auth
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/zmactep/auth#readme
license:             BSD3
license-file:        LICENSE
author:              Pavel Yakovlev
maintainer:          pavel@yakovlev.me
copyright:           Copyright: (c) 2016 Pavel Yakovlev
category:            Math
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AuthServer
  other-modules:       ServerState
                     , Data.Bson.Serialization
                     , Route.Auth.Cookies
                     , Route.Auth
                     , Crypto.Session
                     , Crypto.Password
                     , Database.Schema.Methods
                     , Database.Schema.Selectors
                     , Database.Schema
                     , Database.Query
                     , Database.Query.User
                     , Database.Query.Group
                     , Database.Query.Session
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , cryptonite
                     , bson
                     , time
                     , network
                     , mongoDB
                     , mtl
                     , transformers
                     , scotty
                     , cookie
                     , wai-extra
                     , http-types
                     , resource-pool
                     , template-haskell
                     , th-lift-instances
                     , fclabels
                     , data-default
  default-language:    Haskell2010

executable auth-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , auth
                     , mtl
  default-language:    Haskell2010

test-suite auth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , auth
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmactep/auth
